# snowflake-ddl-extractor

./: .gitignore  README.md  project-requirement.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/snow_ddl_extractor/: __init__.py  __main__.py  cli.py  connector.py  extractor.py  writer.py
tests/: test_sanitize.py
